<resources>
    <string name="app_name">SSMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_profile">SSMS - Create Profile</string>
    <string name="title_activity_delete_profile">SSMS - Delete Profile</string>
    <string name="title_activity_send_message">SSMS - Send Message</string>
    <string name="create_profile_button_text">Create New SSMS Profile</string>
    <string name="transmit_key_button_text">Transmit Encryption Key</string>
    <string name="recieve_key_button_text">Receive Encryption Key</string>
    <string name="send_message_button_text">Send Message</string>
    <string name="name_box_default_text">Enter Profile Name Here</string>
    <string name="generate_key_button_text">Generate Encryption Key For Profile</string>
    <string name="delete_profile_button_text">Delete SSMS Profile</string>
    <string name="delete_this_profile_button">Delete Above Profile</string>
    <string name="delete_all_profiles_button">Delete All Profiles</string>
    <string name="second_previous_text_message_label">Second-to-last message:</string>
    <string name="previous_text_message_label">Last message:</string>
    <string name="write_message_here_label">Write your message here:</string>
</resources>
