<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">

    <TextView android:text="Welcome to SSMS!" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/create_profile_button_text"
        android:id="@+id/create_profile_button"
        android:layout_below="@+id/send_message_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/transmit_key_button_text"
        android:id="@+id/transmit_key_button"
        android:layout_below="@+id/create_profile_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/recieve_key_button_text"
        android:id="@+id/recieve_key_button"
        android:layout_below="@+id/transmit_key_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:text="@string/send_message_button_text"
        android:id="@+id/send_message_button"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/delete_profile_button_text"
        android:id="@+id/delete_profile_button"
        android:layout_below="@+id/recieve_key_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
