<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="io.github.ssternklar.ssms.DeleteProfileActivityFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_box"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/name_box_default_text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/delete_this_profile_button"
        android:id="@+id/delete_this_button"
        android:layout_above="@+id/delete_all_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:text="@string/delete_all_profiles_button"
        android:id="@+id/delete_all_button"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
